--- a/adminlogin.html
+++ b/adminlogin.html
@@ -25,13 +25,13 @@
   <div id="content">
     <h2><span style="color:#003300">Admin Login</span></h2>
     
-    <form action="admin_dash.html" method="post" onSubmit="return validateForm(this,arrFormValidation);" enctype="multipart/form-data" name="form2" id="form2">
+    <form action="admin_dash.html" method="post"  name="form2admin" id="form2admin">
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td height="28"><div align="left">User Name:</div></td>
           <td><span id="sprytextfield3">
             <label>
-            	<input required type="text" name="txtName" id="txtName" />
+            	<input required type="text" name="txtAName" id="txtAName" />
             </label>
           </span></td>
         </tr>
@@ -41,14 +41,14 @@
           <td height="30">Password:</td>
           <td><span id="sprytextfield7">
             <label>
-            <input required type="password" name="txtPassword" id="txtPassword" />
+            <input required type="password" name="txtAPassword" id="txtAPassword" />
             </label>
           </span></td>
         </tr>
         <tr>
           <td>&nbsp;</td>
           <td><label>
-            <input type="submit" name="loginbtn2" id="loginbtn2" value="Login" />
+            <input type="submit" name="loginbtn2A" id="loginbtn2A" value="Login" />
           </label></td>
         </tr>
         <tr>
