--- a/report.html
+++ b/report.html
@@ -55,7 +55,7 @@
   <div id="content">
     <h2><span style="color:#003300">Register Incident</span></h2>
     
-    <form action="view-all-records.html" method="post" onSubmit="return validateForm(this,arrFormValidation);" enctype="multipart/form-data" name="form2" id="form2">
+    <form action="view-all-records.html" method="post" onSubmit="return validateForm(this,arrFormValidation);" enctype="multipart/form-data" name="form2R" id="form2R">
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tr>
           <td height="29">Incident Type</td>
@@ -106,7 +106,7 @@
         <tr>
           <td>&nbsp;</td>
           <td><label>
-            <a href="#"><input type="button" name="button2" id="button2" value="Register"/></a>
+            <input type="submit" name="button2" id="button2" value="Create Incident"/></a>
           </label></td>
         </tr>
 
