working on report redflag

--- a/Register.html
+++ b/Register.html
@@ -25,7 +25,7 @@
   <div id="content">
     <h2><span style="color:#003300">New User Registration</span></h2>
     
-    <form action="report.html" method="post" onSubmit="return validateForm(this,arrFormValidation);" enctype="multipart/form-data" name="form2" id="form2">
+    <form action="report.html" onSubmit="return validateForm(this,arrFormValidation);" enctype="multipart/form-data" name="form2" id="form2">
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td height="28"><div align="left">User Name:</div></td>
