--- a/adminlogin.html
+++ b/adminlogin.html
@@ -25,7 +25,7 @@
   <div id="content">
     <h2><span style="color:#003300">Admin Login</span></h2>
     
-    <form action="admin_dash.html" method="post"  name="form2admin" id="form2admin">
+    <form action="admin_dash.html"  name="form2admin" id="form2admin">
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td height="28"><div align="left">User Name:</div></td>
