--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div id="right-col">
     <h2>Login</h2>
     <div class="scroll">
-      <form name="form1" method="post" action="view-all-records.html">
+      <form name="form1" action="view-all-records.html">
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td height="26">User Name:</td>
